Fix collapsible arrow alignment

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -825,7 +825,7 @@
   border-left-color: currentColor;
   border-width: 0.3em 0 0.3em 0.5em;
   position: absolute;
-  top: calc((var(--doc-line-height) * 1.1 - 0.3) * 1em);
+  top: calc((var(--doc-line-height) * 0.5 - 0.3) * 1em);
   left: 0;
   transform: translateX(15%);
 }
